# serializer version: 1
# name: TestFailureSnapshot.test_terminal_failure_sequence
  dict({
    'edits': list([
      dict({
        'content': None,
        'embeds': list([
          dict({
            'color': 15548997,
            'description': 'Send your message again. If it keeps happening, ask an admin for help.',
            'fields': list([
              tuple(
                'Notice',
                list([
                  'The turn ended unexpectedly.',
                  'The conversation and its workspace are kept.',
                ]),
              ),
            ]),
            'footer': 'Atlas\u2003\u200315s\u2003\u2003$0.003 used',
            'title': 'Something went wrong.',
          }),
        ]),
      }),
    ]),
    'sends': list([
      dict({
        'content': None,
        'embeds': list([
          dict({
            'color': 3447003,
            'description': None,
            'fields': list([
            ]),
            'footer': '0s',
            'title': 'Working on it…',
          }),
        ]),
      }),
    ]),
  })
# ---
# name: TestSuccessSequenceSnapshot.test_thinking_tool_then_done_sequence
  dict({
    'edits': list([
      dict({
        'content': None,
        'embeds': list([
          dict({
            'color': 3447003,
            'description': None,
            'fields': list([
              tuple(
                'Details',
                list([
                  '`🖋️ Running a command`',
                ]),
              ),
            ]),
            'footer': '11s',
            'title': 'Working on it…',
          }),
        ]),
      }),
      dict({
        'content': None,
        'embeds': list([
          dict({
            'color': 5763719,
            'description': None,
            'fields': list([
            ]),
            'footer': 'Atlas\u2003\u200311s\u2003\u2003$0.008 used',
            'title': None,
          }),
        ]),
      }),
      dict({
        'content': 'Here is the answer.',
        'embeds': None,
      }),
    ]),
    'sends': list([
      dict({
        'content': None,
        'embeds': list([
          dict({
            'color': 3447003,
            'description': None,
            'fields': list([
            ]),
            'footer': '0s',
            'title': 'Working on it…',
          }),
        ]),
      }),
    ]),
  })
# ---
